<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="display"></string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="btnSuma">+</string>
    <string name="btnIgual">=</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplica">x</string>
    <string name="btnDivide">/</string>

</resources>